getting-started-manifest/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: getting-started-deployment
  labels:
    app: getting-started
spec:
  replicas: 1
  selector:
    matchLabels:
      app: getting-started
  template:
    metadata:
      labels:
        app: getting-started
    spec:
      containers:
      - name: getting-started
        image: 140722552536.dkr.ecr.ap-northeast-1.amazonaws.com/getting-started:'develop-755cf79'
        ports:
        - containerPort: 8080
