getting-started-manifest/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: getting-started-ingress
  annotations:
    kubernetes.io/ingress.class: "nginx"
spec:
  rules:
  - host: dummy-host-name
    http:
      paths:
      - path: /hello
        pathType: Prefix
        backend:
          service:
            name: getting-started-service
            port:
              number: 8080
